+ typo fix on v2 blog post

--- a/_posts/2011-12-2-chicago-lobbyists-v2-is-here.textile
+++ b/_posts/2011-12-2-chicago-lobbyists-v2-is-here.textile
@@ -42,4 +42,4 @@ Here is a rundown of the new features:
 	<li>All detail pages have comments (powered by <a href='http://disqus.com/dashboard/'>Disqus</a>)</li>
 </ol>
 
-We're all really excited about these new updates. We now have the most accurate and detailed visualization of lobbyist activities around. That's something to be proud of.c
+We're all really excited about these new updates. We now have the most accurate and detailed visualization of lobbyist activities around. That's something to be proud of.
