--- a/_posts/2011-12-14-chicago-lobbyists-a4mc-finalist.textile
+++ b/_posts/2011-12-14-chicago-lobbyists-a4mc-finalist.textile
@@ -5,7 +5,9 @@ author: Derek
 ---
 by Derek Eder
 
-Dec 14, 2011 - Last night, <a href='http://appsformetrochicago.com/'>Apps For Metro Chicago</a> announced the 20 finalists for their Grand Challenge. The winners will be announced on Dec 16 at 10:30am. The Grand Challenge winner will be awarded $10,000. <a href='http://appsformetrochicago.com/rules#prizes'>More on the awards here</a>. Good luck to everyone!
+Dec 14, 2011 - Last night, <a href='http://appsformetrochicago.com/'>Apps For Metro Chicago</a> announced the 20 finalists for their Grand Challenge and Chicago Lobbyists was one of them! 
+
+The winners will be announced on Dec 16 at 10:30am. The Grand Challenge winner will be awarded $10,000. <a href='http://appsformetrochicago.com/rules#prizes'>More on the awards here</a>. Good luck to everyone!
 
 <h3>Judges' Picks (5)</h3>
 
