updated opengov section of procurement post

--- a/_posts/2012-1-12-chicago-aint-ready-for-procurement-reform.textile
+++ b/_posts/2012-1-12-chicago-aint-ready-for-procurement-reform.textile
@@ -19,7 +19,7 @@ Why? Because the city is more concerned with minimizing the risk of project fail
 
 Consider the firm the city chose to build the lobbyist system: Crowe Horath is the same company that built the <a href="http://www.cityofchicago.org/city/en.html">City of Chicago’s current website</a>. The city paid them <a href="http://newsblogs.chicagotribune.com/clout_st/2010/03/city-of-chicago-unveils-redesigned-web-site.html">$1.8 million</a> in 2010 to carry out the city’s first website redesign in 9 years. This company also built the <a href="http://www.explorechicago.org/city/en.html">Explore Chicago</a> tourism website, and <a href="http://www.crowehorwath.com/ContentDetails.aspx?id=1321">applied the same design</a> to the City of Chicago site.
 
-At an <a href='http://www.meetup.com/OpenGovChicago/events/38655692/'>OpenGov Chicago meet up</a> in November (for which I am an event organizer), the group <a href='https://groups.google.com/forum/embed/?place=forum/OpenGovChicago#!topic/opengovchicago/Zr284xOnARU'>reviewed and critiqued the shortcomings of the City’s website and gave feedback on ways to improve it</a>. The group’s general consensus was that the site has many usability problems. So many, in fact, that the city is now looking to redesign it again after being in use for less than two years.
+At an <a href='http://www.meetup.com/OpenGovChicago/events/38655692/'>OpenGov Chicago meet up</a> in November, the group discussed the City's website. Some people <a href='https://groups.google.com/forum/embed/?place=forum/OpenGovChicago#!topic/opengovchicago/Zr284xOnARU'>raised usability issues, and several suggestions for improvement were made</a>. The city seems to recognize that there are issues with the site, since they are looking to redesign it again after being in use for less than two years. (<em>Note: I am a co-organizer of OpenGov Chicago, but this blog post is my own opinion and not a statement on behalf of the group</em>)
 
 The question now is, with Mayor Emanuel touting innovation and change, why is it still business as usual when it comes doling out taxpayer dollars for the projects that really matter?
 
