--- a/_posts/2012-1-31-open-city-on-chicago-tonight.textile
+++ b/_posts/2012-1-31-open-city-on-chicago-tonight.textile
@@ -4,8 +4,12 @@ title: Open City apps on WTTW's Chicago Tonight
 author: Derek 
 ---
 
-Jan 31, 2012 – Derek Eder and Chad Pry, the two lead developers on this site, got a chance to appear on WTTW's Chicago Tonight along side Chicago CTO John Tolva Tuesday night. In their panel discussion they discussed Chicago Lobbyists, <a href='http://lookatcook.com'>Look at Cook</a>, <a href='http://derekeder.com/clearstreets/'>ClearStreets</a>, the City's <a href='http://www.cityofchicago.org/content/city/en/depts/mayor/iframe/plow_tracker.html'>Plow Tracker</a> and open data in general.
+Jan 31, 2012 – Derek Eder and Chad Pry, the two lead developers on this site, got a chance to appear on WTTW <a href='http://chicagotonight.wttw.com/'>Chicago Tonight</a> along side <a href='http://twitter.com/ChicagoCTO'>Chicago CTO</a> John Tolva Tuesday night. 
+
+In their panel discussion they talked about <a href='http://chicagolobbyists.org'>Chicago Lobbyists</a>, <a href='http://lookatcook.com'>Look at Cook</a>, <a href='http://derekeder.com/clearstreets/'>ClearStreets</a>, the City's <a href='http://www.cityofchicago.org/content/city/en/depts/mayor/iframe/plow_tracker.html'>Plow Tracker</a> and the open data movement in Chicago.
 
 Watch the segment below:
 
 <iframe src="http://www.wttw.com/video/embed/iframeEmbedSource.html?feed=http://feed.theplatform.com/f/0HWnt/1jiUX6_ANOBi&mediaIDs=2191815569"  width="600" height="400"/> </iframe>
+
+Source: <a href='http://chicagotonight.wttw.com/2012/01/31/chicago-data-apps'>Chicago Data Apps</a> on <em>Chicago Tonight</em> (WTTW)
